begin paralax effect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,22 @@
-<h1>Welcome</h1>
-
+<header class="mainHeader">
+  <div class="layers">
+    <div class="layersHeader">
+      <div class="layersCaption">Шаблон с паралаксом</div>
+      <div class="layersTitle">Чудный лес</div>
+    </div>
+    <div class="layersBase"></div>
+    <div class="layersMiddle"></div>
+    <div class="layersFront"></div>
+  </div>
+</header>
+<article class="mainArticle">
+  <div class="mainArticleContent">
+    <h2 class="mainArticleHeader">Для своих проектов</h2>
+    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quo, vel! Eum, fuga
+      hic mollitia odio
+      officiis possimus quam! Aliquid beatae cum deleniti enim esse fugiat incidunt inventore necessitatibus
+      reprehenderit voluptates. Ducimus.
+    </p>
+  </div>
+  <div class="copy">© Angor78</div>
+</article>
