--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <header class="mainHeader">
+  <div>Login</div>
   <div class="layers">
     <div class="layersHeader">
-      <div class="layersCaption">Шаблон с паралаксом</div>
-      <div class="layersTitle">Чудный лес</div>
+      <div class="layersCaption">Cards for learn</div>
+      <div class="layersTitle">Magic memory</div>
     </div>
     <div class="layersBase"></div>
     <div class="layersMiddle"></div>
