add shared module with modal-form-window.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <header class="mainHeader">
-  <div>Login</div>
   <div class="layers">
     <div class="layersHeader">
       <div class="layersCaption">Cards for learn</div>
       <div class="layersTitle">Magic memory</div>
+      <button>Login</button>
     </div>
     <div class="layersBase"></div>
     <div class="layersMiddle"></div>
