--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,2 +1,7 @@
 <p>login works!</p>
+<form >
+  <input type="email"/>
+  <input type="password"/>
+  <button type="submit">login</button>
+</form>
 
