--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,18 @@
+
 <header class="mainHeader">
   <div class="layers">
     <div class="layersHeader">
       <div class="layersCaption">Cards for learn</div>
       <div class="layersTitle">Magic memory</div>
-      <button>Login</button>
     </div>
+
+
     <div class="layersBase"></div>
     <div class="layersMiddle"></div>
     <div class="layersFront"></div>
   </div>
 </header>
+
 <article class="mainArticle">
   <div class="mainArticleContent">
     <h2 class="mainArticleHeader">Для своих проектов</h2>
@@ -18,6 +21,14 @@
       officiis possimus quam! Aliquid beatae cum deleniti enim esse fugiat incidunt inventore necessitatibus
       reprehenderit voluptates. Ducimus.
     </p>
+    <button class="button" (click)="openModal('custom-modal-1')">Sign in</button>
   </div>
+
+
   <div class="copy">© Angor78</div>
 </article>
+<div class="modal">
+  <jw-modal id="custom-modal-1">
+    <app-login></app-login>
+  </jw-modal>
+</div>
