--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,8 +43,8 @@ code {
   border: navajowhite;
   padding: 8px 28px;
   color: #FFFFFF;
-  background: #366EFF;
-  box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  background: green;
+  box-shadow: 0 4px 18px rgba(13, 255, 0, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
   border-radius: 30px;
   cursor: pointer;
 }
