--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 </article>
 <div class="modal">
   <jw-modal id="custom-modal-1">
-    <app-login></app-login>
+    <magic-login></magic-login>
   </jw-modal>
 </div>
 
