--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ code {
   border: navajowhite;
   padding: 8px 28px;
   color: #FFFFFF;
-  background: green;
+  background: rgb(0, 128, 0);
   box-shadow: 0 4px 18px rgba(13, 255, 0, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
   border-radius: 30px;
   cursor: pointer;
