--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -24,45 +24,50 @@
 <!--  </form>-->
 <div class="auth-container">
   <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()" class="form">
+    <h2>Вход в аккаунт</h2>
     <!-- Email -->
-    <label>
-      Введите email
-      <input
-        type="text"
-        formControlName="email"
-        required
-        [ngClass]="{
+    <div class="authBlock">
+      <label>
+        <input
+          type="text"
+          formControlName="email"
+          placeholder="Введите email"
+          required
+          [ngClass]="{
           inputError: email!.invalid && (email!.dirty || email!.touched),
           inputSuccess: email!.valid
         }"
-      />
-    </label>
-    <div *ngIf="email!.invalid && (email!.dirty || email!.touched)" class="error">
-      <div *ngIf="email!.errors?.['required']">Email is required</div>
-      <div *ngIf="email!.errors?.['pattern']">Email incorrect pattern</div>
-    </div>
-    <!-- Password -->
-    <label>
-      Введите password
-      <input
-        type="password"
-        formControlName="password"
-        required
-        [ngClass]="{
+        />
+        <div *ngIf="email!.invalid && (email!.dirty || email!.touched)" class="error">
+          <div *ngIf="email!.errors?.['required']">Email is required</div>
+          <div *ngIf="email!.errors?.['pattern']">Email incorrect pattern</div>
+        </div>
+      </label>
+
+      <!-- Password -->
+      <label>
+        <input
+          type="password"
+          formControlName="password"
+          placeholder="Введите password"
+          required
+          [ngClass]="{
           inputError: password!.invalid && (password!.dirty || password!.touched),
           inputSuccess: password!.valid
         }"
-      />
-    </label>
-    <div *ngIf="password!.invalid && (password!.dirty || password!.touched)" class="error">
-      <div *ngIf="password!.errors?.['required']">Password is required.</div>
-      <div *ngIf="password!.errors?.['minlength']">Name must be at least 3 characters long.</div>
+        />
+        <div *ngIf="password!.invalid && (password!.dirty || password!.touched)" class="error">
+          <div *ngIf="password!.errors?.['required']">Password is required.</div>
+          <div *ngIf="password!.errors?.['minlength']">Name must be at least 3 characters long.</div>
+        </div>
+      </label>
+
     </div>
-
+    <label> <input type="checkbox" formControlName="rememberMe" /> Запомнить </label>
     <!-- Remember me -->
-    <label> <input type="checkbox" formControlName="rememberMe" /> remember me </label>
-
-    <button type="submit" [disabled]="loginForm.invalid">sign in</button>
+        <p>Уже есть аккаунт?</p>
+        <a class='underlinedLink'>Зарегистрировать</a>
+    <button class="button" type="submit" [disabled]="loginForm.invalid">Войти</button>
   </form>
 </div>
 
