--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -1,22 +1,41 @@
 .box {
-  width: 300px;
-  margin: 0 auto;
+  //width: 300px;
+  //margin: 0 auto;
+  min-height: 550px;
 }
-
+.authBlock{
+  height: 120px;
+  margin-bottom: 20px;
+}
 .form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
-
+.form h2 {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+.form input {
+  border: none;
+  background-color: transparent;
+  border-bottom: 2px solid #252525;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 15px;
+  outline: none;
+}
+.underlinedLink {
+  display: inline-block;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 0 auto;
+  text-decoration-line: underline;
+  color: #366EFF;
+  cursor: pointer;
+}
 .error {
-  color: red
+  color: #bd0202
 }
 
-.inputError {
-  background-color: #f3c4c4;
-}
-
-.inputSuccess {
-  background-color: #cff3cf;
-}
