--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,27 +1,3 @@
-<!--<div class="auth-container">-->
-<!--  <h1>Sign in</h1>-->
-<!--  <form>-->
-<!--    <input-->
-<!--      id="email"-->
-<!--      name="email"-->
-<!--      type="email"-->
-<!--    />-->
-<!--    <input-->
-<!--      id='password'-->
-<!--      type='password'-->
-<!--    />-->
-<!--    <input type="checkbox" id='rememberMe'/>-->
-<!--    Remember me-->
-
-<!--    <div class='forgotMe'>-->
-<!--      <a>Forgot Password?</a>-->
-<!--    </div>-->
-<!--    <div class='auth-button-wrapper'>-->
-<!--      <button class="button"  type='submit'>Sign-->
-<!--        in-->
-<!--      </button>-->
-<!--    </div>-->
-<!--  </form>-->
 <div class="auth-container">
   <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()" class="form">
     <h2>Вход в аккаунт</h2>
@@ -39,8 +15,8 @@
         }"
         />
         <div *ngIf="email!.invalid && (email!.dirty || email!.touched)" class="error">
-          <div *ngIf="email!.errors?.['required']">Email is required</div>
-          <div *ngIf="email!.errors?.['pattern']">Email incorrect pattern</div>
+          <div *ngIf="email!.errors?.['required']">Email обязателен.</div>
+          <div *ngIf="email!.errors?.['pattern']">Email некоректен.</div>
         </div>
       </label>
 
@@ -49,7 +25,7 @@
         <input
           type="password"
           formControlName="password"
-          placeholder="Введите password"
+          placeholder="Введите пароль"
           required
           [ngClass]="{
           inputError: password!.invalid && (password!.dirty || password!.touched),
@@ -57,11 +33,13 @@
         }"
         />
         <div *ngIf="password!.invalid && (password!.dirty || password!.touched)" class="error">
-          <div *ngIf="password!.errors?.['required']">Password is required.</div>
-          <div *ngIf="password!.errors?.['minlength']">Name must be at least 3 characters long.</div>
+          <div *ngIf="password!.errors?.['required']">Пароль обязателен.</div>
+          <div *ngIf="password!.errors?.['minlength']">Не менее 3 символов.</div>
         </div>
       </label>
-
+          <div class='forgotMe'>
+            <a>Забыли пароль?</a>
+          </div>
     </div>
     <label> <input type="checkbox" formControlName="rememberMe" /> Запомнить </label>
     <!-- Remember me -->
@@ -71,10 +49,4 @@
   </form>
 </div>
 
-
-<!--  <div class='add-reg-block'>-->
-<!--    <p>Already have an account?</p>-->
-<!--    <a class='underlinedLink'>Sign Up</a>-->
-<!--  </div>-->
-<!--</div>-->
 
