--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,11 @@
     <div class="layersFront"></div>
   </div>
 </header>
+
 <article class="mainArticle" #myArtical>
+  <div *ngIf="isLoading$">
+    <magic-preloader></magic-preloader>
+  </div>
   <div class="mainArticleContent">
     <h2 class="mainArticleHeader">Учебный проект на Angular</h2>
     <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quo, vel! Eum, fuga
