--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,6 +1,9 @@
 <div class="jw-modal">
+
   <div class="jw-modal-body">
-    <ng-content></ng-content>
+    <div class="content">
+      <ng-content></ng-content>
+    </div>
   </div>
 </div>
 <div class="jw-modal-background"></div>
