--- a/src/app/shared/components/modal/modal.component.scss
+++ b/src/app/shared/components/modal/modal.component.scss
@@ -56,5 +56,7 @@ body.jw-modal-open {
   /* body overflow is hidden to hide main scrollbar when modal window is open */
   //overflow: hidden;
 }
-
+//.content{
+//  display: none;
+//}
 
