--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 
 <div class="profileInfo" *ngIf="profileData$ | async let profile">
-  <h2 class='title'>Personal Information</h2>
+  <h2 class='title'>Профиль пользователя.</h2>
   <div class='blockAvatar'>
     <img class='avatar' src="{{profile.avatar}}" alt="avatar"/>
 <!--    <UploadAvatar/>-->
