--- a/src/app/shared/components/preloader/preloader.component.scss
+++ b/src/app/shared/components/preloader/preloader.component.scss
@@ -7,13 +7,13 @@
   margin-left: auto;
   min-width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.8);
+  background: transparent;
   z-index: 1002;
 
   .spinner {
     position: absolute;
-    height: 380px;
-    width: 260px;
+    height: 280px;
+    width: 160px;
     border: 3px solid transparent;
     box-shadow: 0 4px 18px rgb(139, 69, 19);
     margin-left: auto;
