--- a/src/app/profile/components/dropdown-menu/dropdown-menu.component.html
+++ b/src/app/profile/components/dropdown-menu/dropdown-menu.component.html
@@ -2,7 +2,6 @@
   <magic-header-profile></magic-header-profile>
   <div class="dropdownContent">
     <a (click)="openModal('profile')">Профиль</a>
-<!--    <a > Users</a>-->
-    <a >Выйти</a>
+    <a (click)="logoutHandler()">Выйти</a>
   </div>
 </div>
