--- a/src/app/profile/components/header-profile/header-profile.component.scss
+++ b/src/app/profile/components/header-profile/header-profile.component.scss
@@ -26,7 +26,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  border-bottom: 1px dashed #000000;
+  border-bottom: 1px dashed #ffffff;
 }
 
 .ava {
