--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -12,6 +12,9 @@
   <div class='blockEmail'>
     <span class='email'>{{profile.email}}</span>
   </div>
+  <div class='blockPacksCount'>
+    <span class='packsCount'>Колод с карточками:{{profile.publicCardPacksCount}}</span>
+  </div>
   <!--    <SuperButton isLoading={isLoading} disabled={isLoading} onClick={logOutHandler} superClassName='withIcon'>-->
   <!--      <img src={icon} alt={'icon'}/>-->
   <!--      <span>Log Out</span>-->
