--- a/src/app/profile/components/profile/profile.component.scss
+++ b/src/app/profile/components/profile/profile.component.scss
@@ -23,8 +23,8 @@
 
 
 .avatar {
-  width: 96px;
-  height: 96px;
+  width: 110px;
+  height: 110px;
   border: 3px solid saddlebrown;
   border-radius: 50%;
 }
@@ -47,6 +47,19 @@
 }
 
 .email {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  opacity: 0.5;
+}
+
+.blockPacksCount {
+  margin-top: 14px;
+  cursor: default;
+}
+
+.packsCount {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
