--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,10 +23,9 @@
   </div>
   <div class="mainArticleContent" *ngIf="!isAuth$">
     <h2 class="mainArticleHeader">Учебный проект на Angular</h2>
-    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quo, vel! Eum, fuga
-      hic mollitia odio
-      officiis possimus quam! Aliquid beatae cum deleniti enim esse fugiat incidunt inventore necessitatibus
-      reprehenderit voluptates. Ducimus.
+    <p class="paragraph"> Соединение нескольких учебных проектов написанных на React framework в один на Angular.
+      За основу взят учебный проект карточек для припоминания написаный в режиме коллективной разработки в IT-incubator.
+      Внешний вид заимствован у WebDesignMaster.
     </p>
     <button class="button" (click)="openModal('login')">Войти</button>
   </div>
